--- a/index.html
+++ b/index.html
@@ -300,54 +300,85 @@
             "Me_derramar__IBAB_Celebracao.html": "Me Derramar - IBAB Celebração",
             "Meu_respirar_+_Meu_prazer__Gabriela_Rocha.html": "Meu Respirar + Meu Prazer - Gabriela Rocha",
             "Milagre__Andre_Valadao.html": "Milagre - André Valadão",
-            "Na_familia_de_Deus__Fernanda_Brum.html": "Na Família de Deus - Fernanda Brum",
-            "Na_paz_de_Deus__Aline_Barros.html": "Na Paz de Deus - Aline Barros",
-            "Nascidos_para_adorar__Aline_Barros.html": "Nascidos Para Adorar - Aline Barros",
-            "Negue_se_mesmo__Gabriela_Rocha.html": "Negue-se Mesmo - Gabriela Rocha",
-            "Ninguem_pode_comparar__Tropas_Realidade.html": "Ninguém Pode Comparar - Tropas Realidade",
-            "No_meio_do_povo__Luan_Souza.html": "No Meio do Povo - Luan Souza",
-            "No_poder_de_Te_adorar__Pablo_Vitória.html": "No Poder de Te Adorar - Pablo Vitória",
-            "Nos_pes_de_Jesus__Aline_Barros.html": "Nos Pés de Jesus - Aline Barros",
-            "O_Coro_de_Mercedes__Renascer_Praise.html": "O Coro de Mercedes - Renascer Praise",
-            "O_Meu_Amor__Marcelo_Antunes.html": "O Meu Amor - Marcelo Antunes",
-            "O_que_tens_de_pagar__Anderson_Silva.html": "O Que Tens de Pagar - Anderson Silva",
-            "O_Salvador__Guilherme_Cesar.html": "O Salvador - Guilherme César",
-            "O_Pai_e_o_Criador__Renascer_Praise.html": "O Pai e o Criador - Renascer Praise",
-            "O_poder_da_adocao__Aline_Barros.html": "O Poder da Adoção - Aline Barros",
-            "O_reino__Gilmar_Sousa.html": "O Reino - Gilmar Sousa",
-            "Olho_em_Ti__Marcio_Almeida.html": "Olho em Ti - Márcio Almeida",
-            "Ousadia__Sergio_Santos.html": "Ousadia - Sérgio Santos",
-            "Pelo_teu_preco__Guilherme_Sa.html": "Pelo Teu Preço - Guilherme Sá",
-            "Permita_mesmo__Cristiane_Sousa.html": "Permita Mesmo - Cristiane Sousa",
-            "Porta_aberta__Kemuel.html": "Porta Aberta - Kemuel",
-            "Portas_do_celular__Renascer_Praise.html": "Portas do Celular - Renascer Praise",
-            "Quero_mais_de_Te__Aline_Barros.html": "Quero Mais de Ti - Aline Barros",
-            "Que_bom_saber__Diante_Do_Trono.html": "Que Bom Saber - Diante do Trono",
-            "Que_Linda_a_Tua_Vida__Tropas.html": "Que Linda a Tua Vida - Tropas",
-            "Reconhecendo_Teu_trono__Diante_Do_Trono.html": "Reconhecendo Teu Trono - Diante do Trono",
-            "Redentor__Diante_Do_Trono.html": "Redentor - Diante do Trono",
-            "Renova_o_coro__Renascer_Praise.html": "Renova o Coro - Renascer Praise",
-            "Reverente__Diante_Do_Trono.html": "Reverente - Diante do Trono",
-            "Sangue_de_Jesus__Fernanda_Brum.html": "Sangue de Jesus - Fernanda Brum",
-            "Se_pode_o_que_quiser__Diante_Do_Trono.html": "Se Pode o Que Quiser - Diante do Trono",
-            "Senhor__Mariana_Valadao.html": "Senhor - Mariana Valadão",
-            "Sonda_me__Diante_Do_Trono.html": "Sonda-me - Diante do Trono",
-            "Sonda_o_meu_coração__Aline_Barros.html": "Sonda o Meu Coração - Aline Barros",
-            "Te_quero_feliz__Aline_Barros.html": "Te Quero Feliz - Aline Barros",
-            "Teu_poder__Diante_Do_Trono.html": "Teu Poder - Diante do Trono",
-            "Um_solo_vivo__Voz_Da_Verdade.html": "Um Solo Vivo - Voz da Verdade",
-            "Uma_vida_de_paz__Renascer_Praise.html": "Uma Vida de Paz - Renascer Praise",
-            "Vencer__Marcelo_Vitória.html": "Vencer - Marcelo Vitória",
-            "Venho_a_Te__Aline_Barros.html": "Venho a Ti - Aline Barros",
-            "Vem_Flui__Marcelo_Antunes.html": "Vem Fluir - Marcelo Antunes",
-            "Viver_de_Ti__Andre_Valadao.html": "Viver de Ti - André Valadão",
-            "Viver_o_que_ouvi__Anderson_Cesar.html": "Viver o Que Ouvi - Anderson César",
-            "Volte_pra_Casa__Marcelo_Vitória.html": "Volte pra Casa - Marcelo Vitória",
-            "Voltar_a_Jerusalem__Gilmar_Sousa.html": "Voltar a Jerusalém - Gilmar Sousa",
-            "Vou_dizer_o_que_quero__Eli_Soares.html": "Vou Dizer o Que Quero - Eli Soares",
-            "Yeshua__Adhemar_De_Campos.html": "Yeshua - Adhemar de Campos",
+            "Milagre_no_altar__Renascer_Praise.html": "Milagre no Altar - Renascer Praise",
+            "Minha_casa_e_eu__Comunhao_&_Adoracao.html": "Minha casa e eu - Comunhao & Adoracao",
+            "Na_casa__Paulo_Cesar_Baruk.html": "Na casa - Paulo Cesar Baruk",
+            "Na_uncao_de_Deus__Elaine_De_Jesus.html": "Na uncao de Deus - Elaine De Jesus",
+            "Nada_alem_do_Sangue__Fernandinho.html": "Nada alem do Sangue - Fernandinho",
+            "Nada_pode_calar_um_adorador__Eyshila.html": "Nada pode calar um adorador - Eyshila",
+            "Nada_temerei__Ministerio_Atitude.html": "Nada temerei - Ministerio Atitude",
+            "Nao_mais_escravos__Aline_Barros.html": "Nao mais escravos - Aline_Barros",
+            "Nenhuma_condenacao_ha__Gabriela_Rocha.html": "Nenhuma condenacao ha - Gabriela Rocha",
+            "Novo_dia,_novo_tempo__Renascer_Praise.html": "Novo dia, novo tempo - Renascer Praise",
+            "Nunca_me_deixou__IBAB.html": "Nunca me deixou - IBAB",
+            "O_Cordeiro__Raiz_Coral.html": "O Cordeiro - Raiz Coral",
+            "O_espirito_de_Deus_+_Na_sala_do_Trono__Alda_Celia.html": "O espírito de Deus + Na sala do Trono - Alda Celia",
+            "O_mover_do_Espirito__Gabriela_Rocha.html": "O mover do Espírito - Gabriela Rocha",
+            "O_que_Sua_Gloria_fez_comigo__Fernanda_Brum_.html": "O que Sua Glória fez comigo - Fernanda Brum",
+            "Oferta_de_amor__Ministerio_Koinonya.html": "Oferta de amor - Ministério Koinonya",
+            "Oh_quao_lindo_esse_Nome_e__Kemuel.html": "Oh quão lindo esse Nome é - Kemuel",
+            "Ora_vem__Ministerio_Sarando_A_Terra_Ferida.html": "Ora vem - Ministério Sarando a Terra Ferida",
+            "Os_sonhos_de_Deus__Ludmila_Ferber.html": "Os sonhos de Deus - Ludmila Ferber",
+            "Ousador_amor__Isaias_Saad.html": "Ousador amor - Isaias Saad",
+            "Pai_Nosso__Pedras_Vivas.html": "Pai Nosso - Pedras Vivas",
+            "Pelo_Sangue__Renascer_Praise.html": "Pelo Sangue - Renascer Praise",
+            "Pelo_poder_do_Teu_amor__Aline_Barros.html": "Pelo poder do Teu amor - Aline Barros",
+            "Perdao__Kleber_Lucas.html": "Perdão - Kleber Lucas",
+            "Plano_melhor__Renascer_Praise.html": "Plano melhor - Renascer Praise",
+            "Poderoso_Deus__Andre_Aquino.html": "Poderoso Deus - André Aquino",
+            "Posso_clamar__Eyshila.html": "Posso clamar - Eyshila",
+            "Pra_sempre__Avivah.html": "Pra sempre - Avivah",
+            "Preciso_de_Ti__Diante_Do_Trono.html": "Preciso de Ti - Diante do Trono",
+            "Promessa__Renascer_Praise.html": "Promessa - Renascer Praise",
+            "Quao_Grande_e_o_meu_Deus__Soraya_Moraes_—_[241016].html": "Quão Grande é o meu Deus - Soraya Moraes (241016)",
+            "Quebrantado__Vineyard.html": "Quebrantado - Vineyard",
+            "Quero_subir__Diante_Do_Trono.html": "Quero subir - Diante do Trono",
+            "Recebe_minha_adoracao__Renascer_Praise.html": "Recebe minha adoração - Renascer Praise",
+            "Reina_em_mim__Vineyard.html": "Reina em mim - Vineyard",
+            "RelancePotpouri_Diante_Do_Trono.html": "Relance (Potpourri) - Diante do Trono",
+            "Rendido_estou__Aline_Barros.html": "Rendido estou - Aline Barros",
+            "Renovame__Aline_Barros.html": "Renova-me - Aline Barros",
+            "Repertorio_de_Batismo__Cantores_variados.html": "Repertório de Batismo - Cantores variados",
+            "Restitui__Renascer_Praise.html": "Restitui - Renascer Praise",
+            "Rompendo_em_fe__Comunidade_Da_Zona_Sul.html": "Rompendo em fé - Comunidade da Zona Sul",
+            "Santo,_Santo,_Santo__Renascer_Praise.html": "Santo, Santo, Santo - Renascer Praise",
+            "Santo_Espirito__Laura_Souguellis.html": "Santo Espírito - Laura Souguellis",
+            "Santo_e_o_Cordeiro(Renascer_Praise)__Coristas_Soprano_&_Contralto.html": "Santo é o Cordeiro (Renascer Praise) - Coristas Soprano & Contralto",
+            "Santo_e_o_Cordeiro(Renascer_Praise)__Coristas_Tenor.html": "Santo é o Cordeiro (Renascer Praise) - Coristas Tenor",
+            "Santo_e_o_Cordeiro(Renascer_Praise)__Soprano_&_Contralto.html": "Santo é o Cordeiro (Renascer Praise) - Soprano & Contralto",
+            "Santo_e_o_Cordeiro(Renascer_Praise)__Tenor_1.html": "Santo é o Cordeiro (Renascer Praise) - Tenor 1",
+            "Santo_e_o_Cordeiro(Renascer_Praise)__Tenor_2.html": "Santo é o Cordeiro (Renascer Praise) - Tenor 2",
+            "Santo_pra_sempre__Gabriel_Guedes.html": "Santo pra sempre - Gabriel Guedes",
+            "Santo_pra_sempre__Gabriel_GuedesCoristas.html": "Santo pra sempre - Gabriel Guedes (Coristas)",
+            "Se_eu_me_humilhar__Discopraise.html": "Se eu me humilhar - Discopraise",
+            "Senhor_Te_quero__Vineyard.html": "Senhor, Te quero - Vineyard",
+            "Senhor_formoso_Es(Medley)__Gabriela_Rocha.html": "Senhor formoso (Medley) - Gabriela Rocha",
+            "Ser_conhecido_de_Deus__Renascer_Praise.html": "Ser conhecido de Deus - Renascer Praise",
+            "Sobrevivi__Sarah_Farias.html": "Sobrevivi - Sarah Farias",
+            "Sondame,_usame__Aline_Barros.html": "Sonda-me, usa-me - Aline Barros",
+            "Sou_um_milagre__Discopraise.html": "Sou um milagre - Discopraise",
+            "Ta_chorando_por_que__Mari_Borges.html": "Tá chorando por quê? - Mari Borges",
+            "Te_agradecoPotpourri_Diante_Do_Trono.html": "Te agradeço (Potpourri) - Diante do Trono",
+            "Te_agradeco__Diante_Do_Trono.html": "Te agradeço - Diante do Trono",
+            "Tempo_de_festa__Diante_Do_Trono.html": "Tempo de festa - Diante do Trono",
+            "Teu_Reino__Ministerio_Cristo_Vive.html": "Teu Reino - Ministério Cristo Vive",
+            "Toca_em_mim__Comunhao_&_Adoracao.html": "Toca em mim - Comunhão & Adoração",
+            "Tributo_a_Iehovah__Eli_Soares.html": "Tributo a Iehovah - Eli Soares",
+            "Tu_esPotpourri__FHOP.html": "Tu és (Potpourri) - FHOP",
+            "Tu_es_Deus__Rachel_Novaes.html": "Tu és Deus - Rachel Novaes",
+            "Tu_es_bom__Israel_Houghton.html": "Tu és bom - Israel Houghton",
+            "Tua_graca_me_basta__Davi_Sacer.html": "Tua graça me basta - Davi Sacer",
+            "Tua_uncao__Ministerio_Nova_Jerusalem.html": "Tua unção - Ministério Nova Jerusalém",
+            "Vem,_espirito_de_Deus__Alexandre_Magnani.html": "Vem, espírito de Deus - Alexandre Magnani",
+            "Vem,_esta_e_a_hora__Vineyard.html": "Vem, esta é a hora - Vineyard",
+            "Vem_me_buscar__Jefferson_&_Suellen.html": "Vem me buscar - Jefferson & Suellen",
+            "Vencendo_vem_Jesus__CC_&_HCC.html": "Vencendo vem Jesus - CC & HCC",
+            "Venha_o_Teu_reino__Davi_Sacer.html": "Venha o Teu reino - Davi Sacer",
+            "Vida_aos_sepulcros__IBAB_Celebracao.html": "Vida aos sepulcros - IBAB Celebração",
+            "Vim_para_adorarTe__Adoracao_&_Adoradores.html": "Vim para adorar Te - Adoração & Adoradores",
+            "Vitorioso_Es__Gabriel_Guedes.html": "Vitorioso és - Gabriel Guedes",
+            "Yahweh_se_manifestara__Marcos_Freire.html": "Yahweh se manifestará - Marcos Freire",
         };
-
         let currentPage = 1;
         const itemsPerPage = 20;
         let filteredPages = [...pages];
