--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
 
     <div class="search">
-        <input type="text" id="searchInput" placeholder="Buscar páginas..." oninput="filterPages()">
+        <input type="text" id="searchInput" placeholder="Buscar músicas..." oninput="filterPages()">
     </div>
 
     <ul id="pageList"></ul>
@@ -379,6 +379,7 @@
             "Vitorioso_Es__Gabriel_Guedes.html": "Vitorioso és - Gabriel Guedes",
             "Yahweh_se_manifestara__Marcos_Freire.html": "Yahweh se manifestará - Marcos Freire",
         };
+        
         let currentPage = 1;
         const itemsPerPage = 20;
         let filteredPages = [...pages];
